# biai-project

./: .gitignore  CMakeLists.txt  README.md  SOM-image-compressor  main.cpp
SOM-BIAI_project/: .gitignore  ImGuiFileBrowser.cpp  README.md  SOM-BIAI_project.sln  SOM-BIAI_project.vcxproj  SOM-BIAI_project.vcxproj.filters  blueChromaNeuronsValues.csv  imgui.ini  lumaNeuronsValues.csv  main.cpp  redChromaNeuronsValues.csv  stb_image.h
SOM-BIAI_project/imgui/: ImGuiFileDialog.cpp
SOM-BIAI_project/include/: Image.h  Misc.h  Neuron.h  Pixel.h  SOMNetwork.h  SOMNetworkDecoder.h  SOMNetworkEncoder.h  Subframe.h  SubframeCompressed.h
SOM-BIAI_project/network-400x400/: blueChromaNeuronsValues.csv  lumaNeuronsValues.csv  redChromaNeuronsValues.csv
SOM-BIAI_project/src/: Image.cpp  Misc.cpp  Neuron.cpp  Pixel.cpp  SOMNetwork.cpp  SOMNetworkDecoder.cpp  SOMNetworkEncoder.cpp  Subframe.cpp  SubframeCompressed.cpp
include/: Image.h  Neuron.h  Pixel.h  SOMNetwork.h  SubframeCompressed.h
src/: Image.cpp  Neuron.cpp  Pixel.cpp  SOMNetwork.cpp
